cm view