@@ -1,585 +1,676 @@
 package com.hieunguyen.ManageContract.service.impl;
 
-import com.hieunguyen.ManageContract.entity.*;
-import com.hieunguyen.ManageContract.repository.ContractRepository;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.hieunguyen.ManageContract.entity.Contract;
+import com.hieunguyen.ManageContract.entity.ContractApproval;
+import com.hieunguyen.ManageContract.entity.ContractVariableValue;
+import com.hieunguyen.ManageContract.entity.ApprovalStep;
 import com.hieunguyen.ManageContract.repository.ContractApprovalRepository;
+import com.hieunguyen.ManageContract.repository.ContractRepository;
 import com.hieunguyen.ManageContract.service.ContractFileService;
+import jakarta.xml.bind.JAXBElement;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.pdfbox.pdmodel.PDDocument;
-import org.apache.pdfbox.pdmodel.PDPage;
-import org.apache.pdfbox.pdmodel.PDPageContentStream;
-import org.apache.pdfbox.pdmodel.common.PDRectangle;
-import org.apache.pdfbox.pdmodel.font.PDFont;
-import org.apache.pdfbox.pdmodel.font.PDType0Font;
-import org.apache.pdfbox.pdmodel.font.PDType1Font;
-import org.apache.pdfbox.pdmodel.graphics.image.PDImageXObject;
-import org.apache.pdfbox.text.PDFTextStripper;
-import org.apache.pdfbox.text.TextPosition;
-import org.springframework.core.io.ClassPathResource;
+import org.docx4j.model.datastorage.migration.VariablePrepare;
+import org.docx4j.openpackaging.packages.WordprocessingMLPackage;
+import org.docx4j.openpackaging.parts.WordprocessingML.BinaryPartAbstractImage;
+import org.docx4j.wml.*;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.FileSystemResource;
+import org.springframework.http.*;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
+import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.*;
+import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class ContractFileServiceImpl implements ContractFileService {
 
+    private static final ObjectFactory WML = new ObjectFactory();
+    private static final String UPLOAD_ROOT = "uploads/contracts";
+    private static final String DOCX_NAME = "contract.docx";
+    private static final String PDF_NAME  = "contract.pdf";
+
+    // chữ ký ảnh mặc định
+    private static final float DEFAULT_SIG_W = 180f;
+    private static final float DEFAULT_SIG_H = 60f;
+
     private final ContractRepository contractRepository;
     private final ContractApprovalRepository contractApprovalRepository;
-    private final OnlyOfficeConvertService onlyOfficeConvertService;
 
+    // OnlyOffice & chữ ký
+    private final RestTemplate rest = new RestTemplate();
+    private final ObjectMapper om = new ObjectMapper();
+
+    @Value("${app.ds.url:http://localhost:8081}")
+    private String docServer; // http://localhost:8081 (Document Server)
+
+    @Value("${app.ds.source-base:http://host.docker.internal:8080}")
+    private String hostBaseUrl; // http://host.docker.internal:8080 (BE base URL để DS gọi vào)
+
+    @Value("${app.signature.storage-dir:uploads/signatures}")
+    private String signatureStorageDir;
+
+    // ========================================================================
+    // ContractFileService API
+    // ========================================================================
+
+    /**
+     * Tạo file hợp đồng (DOCX từ template + variables) rồi convert PDF bằng OnlyOffice
+     */
     @Override
     public String generateContractFile(Contract contract) {
-        if (contract.getFilePath() != null && Files.exists(Path.of(contract.getFilePath()))) {
-            return contract.getFilePath();
+        try {
+            Path docx = ensureDocxGenerated(contract, /*overrideVars*/ null);
+            Path pdf  = pdfPathOf(contract.getId());
+
+            convertToPdfUsingOnlyOffice(contract.getId(), docx, pdf);
+
+            contract.setFilePath(pdf.toString());
+            contract.setFileGeneratedAt(LocalDateTime.now());
+            contractRepository.save(contract);
+
+            return pdf.toString();
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to generate contract file: " + e.getMessage(), e);
         }
-        throw new RuntimeException("Contract file not found. Please upload contract file first.");
     }
 
+    /**
+     * Tạo file hợp đồng với danh sách biến truyền vào (ưu tiên biến tham số nếu có)
+     */
     @Override
     public String generateContractFileWithVariables(Contract contract, List<ContractVariableValue> variableValues) {
-        if (contract.getFilePath() != null && Files.exists(Path.of(contract.getFilePath()))) {
-            return contract.getFilePath();
+        try {
+            Path docx = ensureDocxGenerated(contract, variableValues);
+            Path pdf  = pdfPathOf(contract.getId());
+
+            convertToPdfUsingOnlyOffice(contract.getId(), docx, pdf);
+
+            contract.setFilePath(pdf.toString());
+            contract.setFileGeneratedAt(LocalDateTime.now());
+            contractRepository.save(contract);
+
+            return pdf.toString();
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to generate contract file (with variables): " + e.getMessage(), e);
         }
-        throw new RuntimeException("Contract file not found. Please upload contract file first.");
     }
 
+    /**
+     * Lấy file gốc để tải xuống:
+     * - Nếu PDF đã sinh -> trả PDF
+     * - Nếu chưa có PDF -> trả DOCX (nếu có)
+     */
     @Override
     public File getContractFile(Long contractId) {
         Contract contract = contractRepository.findById(contractId)
                 .orElseThrow(() -> new RuntimeException("Contract not found"));
 
-        if (contract.getFilePath() == null) {
-            throw new RuntimeException("Contract file not found");
+        Path pdf  = pdfPathOf(contractId);
+        Path docx = docxPathOf(contractId);
+
+        if (Files.exists(pdf)) return pdf.toFile();
+        if (Files.exists(docx)) return docx.toFile();
+
+        // fallback: nếu DB có filePath và tồn tại thì trả
+        if (contract.getFilePath() != null && Files.exists(Paths.get(contract.getFilePath()))) {
+            return Paths.get(contract.getFilePath()).toFile();
         }
 
-        Path path = Path.of(contract.getFilePath());
-        if (!Files.exists(path)) {
-            throw new RuntimeException("Contract file not found on server");
-        }
-        return path.toFile();
+        throw new RuntimeException("Contract file not generated yet");
     }
 
+    /**
+     * Ký bằng ảnh: thay thế placeholder trong DOCX => convert lại PDF (OnlyOffice)
+     * @param filePath có thể là đường dẫn PDF hoặc DOCX hiện tại; dùng để suy ra contractId
+     */
     @Override
     public String embedSignature(String filePath, String imageUrl, String placeholder) {
         try {
             if (placeholder == null || placeholder.isBlank()) {
-                throw new RuntimeException("Placeholder is required for signature embedding");
+                throw new RuntimeException("Placeholder is required");
             }
 
-            Path pdfPath = Path.of(filePath);
-            if (!Files.exists(pdfPath)) {
-                throw new RuntimeException("PDF file not found: " + filePath);
+            Long contractId = extractContractIdFromPath(Paths.get(filePath));
+
+            // Bảo đảm đã có DOCX
+            Path docx = ensureDocxGenerated(
+                    contractRepository.findById(contractId).orElseThrow(), null);
+
+            // Chèn ảnh vào DOCX
+            byte[] imageBytes = loadImageBytes(imageUrl);
+            if (imageBytes == null || imageBytes.length == 0) {
+                throw new RuntimeException("Signature image is empty or invalid");
             }
 
-            Path tempPdf = pdfPath.getParent().resolve("temp_signed_" + System.currentTimeMillis() + ".pdf");
-
-            try (PDDocument document = PDDocument.load(pdfPath.toFile())) {
-                byte[] imageBytes = loadImageBytes(imageUrl);
-                if (imageBytes == null) {
-                    throw new RuntimeException("Cannot load signature image");
-                }
-
-                PDImageXObject image = PDImageXObject.createFromByteArray(document, imageBytes, "signature");
-
-                // TÌM VÀ THAY THẾ PLACEHOLDER TRONG PDF DỰA TRÊN TEXT
-                boolean replaced = findAndReplacePlaceholderByText(document, placeholder, image);
-
-                if (!replaced) {
-                    log.warn("Placeholder '{}' not found in PDF {}", placeholder, filePath);
-                    // KHÔNG throw exception, chỉ log warning và tiếp tục
-                }
-
-                document.save(tempPdf.toFile());
-                log.info("✅ Successfully embedded signature for placeholder: {}", placeholder);
+            WordprocessingMLPackage pkg = WordprocessingMLPackage.load(docx.toFile());
+            boolean ok = replacePlaceholderWithImage(pkg, normalizePlaceholder(placeholder), imageBytes, DEFAULT_SIG_W, DEFAULT_SIG_H);
+            if (!ok) {
+                throw new RuntimeException("Placeholder not found in DOCX: " + placeholder);
             }
+            pkg.save(docx.toFile());
 
-            Files.move(tempPdf, pdfPath, StandardCopyOption.REPLACE_EXISTING);
-            return filePath;
+            // Convert lại PDF
+            Path pdf = pdfPathOf(contractId);
+            convertToPdfUsingOnlyOffice(contractId, docx, pdf);
 
+            // Cập nhật DB
+            Contract c = contractRepository.findById(contractId).orElseThrow();
+            c.setFilePath(pdf.toString());
+            c.setFileGeneratedAt(LocalDateTime.now());
+            contractRepository.save(c);
+
+            return pdf.toString();
         } catch (Exception e) {
-            log.error("❌ Embed signature failed - File: {}, Placeholder: {}, Error: {}",
-                    filePath, placeholder, e.getMessage());
-            throw new RuntimeException("Embed signature failed: " + e.getMessage(), e);
+            throw new RuntimeException("Embed signature (OnlyOffice) failed: " + e.getMessage(), e);
         }
     }
 
+    /**
+     * Ký theo step phê duyệt – dùng placeholder của step
+     */
     @Override
     public String embedSignatureForApproval(Long contractId, String imageUrl, Long approvalId) {
         try {
             ContractApproval approval = contractApprovalRepository.findById(approvalId)
                     .orElseThrow(() -> new RuntimeException("Contract approval not found"));
 
-            if (approval.getSignaturePlaceholder() == null || approval.getSignaturePlaceholder().isBlank()) {
-                throw new RuntimeException("No signature placeholder defined for this approval step");
+            String ph = approval.getSignaturePlaceholder();
+            if (ph == null || ph.isBlank()) {
+                throw new RuntimeException("No signature placeholder defined for this step");
             }
 
-            Contract contract = approval.getContract();
-            if (contract.getFilePath() == null) {
-                throw new RuntimeException("Contract file not found");
-            }
-
-            // KIỂM TRA CHỮ KÝ TRƯỚC KHI NHÚNG
-            byte[] signatureBytes = loadImageBytes(imageUrl);
-            if (signatureBytes == null || signatureBytes.length == 0) {
-                throw new RuntimeException("Cannot load signature image - signature data is empty or invalid");
-            }
-
-            log.info("✅ Successfully loaded signature image, size: {} bytes", signatureBytes.length);
-
-            return embedSignature(contract.getFilePath(), imageUrl, approval.getSignaturePlaceholder());
-
+            // Lấy current (PDF hoặc DOCX) để suy ra contractId (hoặc dùng trực tiếp id)
+            File file = getContractFile(contractId);
+            return embedSignature(file.getAbsolutePath(), imageUrl, ph);
         } catch (Exception e) {
-            log.error("❌ Embed signature for approval failed - Contract: {}, Approval: {}, Error: {}",
-                    contractId, approvalId, e.getMessage());
-            throw new RuntimeException("Embed signature for approval failed: " + e.getMessage(), e);
+            throw new RuntimeException("Embed signature for approval (OnlyOffice) failed: " + e.getMessage(), e);
         }
     }
 
+    /**
+     * Ghi thêm text phê duyệt vào DOCX (cuối tài liệu) rồi convert lại PDF
+     */
     @Override
     public void addApprovalText(String filePath, String approvalText) {
         try {
-            Path pdfPath = Path.of(filePath);
-            if (!Files.exists(pdfPath)) {
-                throw new RuntimeException("PDF file not found: " + filePath);
-            }
+            Long contractId = extractContractIdFromPath(Paths.get(filePath));
+            Contract contract = contractRepository.findById(contractId)
+                    .orElseThrow(() -> new RuntimeException("Contract not found"));
 
-            Path tempPdf = pdfPath.getParent().resolve("temp_approved_" + System.currentTimeMillis() + ".pdf");
+            Path docx = ensureDocxGenerated(contract, null);
 
-            try (PDDocument document = PDDocument.load(pdfPath.toFile())) {
-                PDFont font = loadUnicodeFont(document);
+            WordprocessingMLPackage pkg = WordprocessingMLPackage.load(docx.toFile());
+            addParagraphWithText(pkg, approvalText, 10, false);
+            pkg.save(docx.toFile());
 
-                PDPage lastPage = document.getPage(document.getNumberOfPages() - 1);
-                addTextToPage(document, lastPage, font, approvalText, 50, 50);
+            Path pdf = pdfPathOf(contractId);
+            convertToPdfUsingOnlyOffice(contractId, docx, pdf);
 
-                document.save(tempPdf.toFile());
-                log.info("✅ Successfully added approval text to PDF: {}", filePath);
-            }
-
-            Files.move(tempPdf, pdfPath, StandardCopyOption.REPLACE_EXISTING);
-
+            contract.setFilePath(pdf.toString());
+            contract.setFileGeneratedAt(LocalDateTime.now());
+            contractRepository.save(contract);
         } catch (Exception e) {
-            log.error("❌ Add approval text failed - File: {}, Error: {}", filePath, e.getMessage());
-            throw new RuntimeException("Add approval text failed: " + e.getMessage(), e);
+            throw new RuntimeException("Add approval text (OnlyOffice) failed: " + e.getMessage(), e);
         }
     }
 
+    /**
+     * Lấy danh sách placeholder chữ ký từ các bước approval của contract
+     */
     @Override
     public List<String> getSignaturePlaceholders(Long contractId) {
         List<ContractApproval> approvals = contractApprovalRepository.findByContractId(contractId);
         List<String> placeholders = new ArrayList<>();
-
-        for (ContractApproval approval : approvals) {
-            if (approval.getSignaturePlaceholder() != null &&
-                    !approval.getSignaturePlaceholder().isBlank()) {
-                placeholders.add(approval.getSignaturePlaceholder());
+        for (ContractApproval a : approvals) {
+            if (a.getSignaturePlaceholder() != null && !a.getSignaturePlaceholder().isBlank()) {
+                placeholders.add(a.getSignaturePlaceholder());
             }
         }
-
         return placeholders;
     }
 
+    /**
+     * Kiểm tra placeholder có tồn tại trong DOCX hiện tại không
+     */
     @Override
     public boolean validatePlaceholdersInContract(Long contractId) {
         try {
-            Contract contract = contractRepository.findById(contractId)
-                    .orElseThrow(() -> new RuntimeException("Contract not found"));
-
-            if (contract.getFilePath() == null) {
-                throw new RuntimeException("Contract file not found");
+            Path docx = docxPathOf(contractId);
+            if (!Files.exists(docx)) {
+                // cố sinh DOCX nếu chưa có
+                Contract c = contractRepository.findById(contractId)
+                        .orElseThrow(() -> new RuntimeException("Contract not found"));
+                generateDocxFile(c);
             }
 
             List<String> placeholders = getSignaturePlaceholders(contractId);
-            if (placeholders.isEmpty()) {
-                log.warn("No signature placeholders found for contract {}", contractId);
-                return false;
-            }
+            if (placeholders.isEmpty()) return false;
 
-            try (PDDocument document = PDDocument.load(new File(contract.getFilePath()))) {
-                String pdfText = extractAllText(document);
-
-                for (String placeholder : placeholders) {
-                    if (!pdfText.contains(placeholder)) {
-                        log.warn("Placeholder '{}' not found in contract file", placeholder);
-                        return false;
-                    }
+            String allText = readAllTextFromDocx(docx);
+            for (String ph : placeholders) {
+                String normalized = normalizePlaceholder(ph);
+                if (!allText.contains(normalized)) {
+                    log.warn("Placeholder '{}' not found in DOCX of contract {}", normalized, contractId);
+                    return false;
                 }
             }
-
-            log.info("✅ All {} placeholders validated successfully for contract {}", placeholders.size(), contractId);
             return true;
-
         } catch (Exception e) {
-            log.error("❌ Error validating placeholders for contract {}: {}", contractId, e.getMessage());
+            log.error("Error validating placeholders for contract {}: {}", contractId, e.getMessage());
             return false;
         }
     }
 
     /**
-     * Tạo file PDF từ template DOCX sử dụng OnlyOffice
+     * Sinh DOCX từ template + biến hợp đồng (ở contract.getVariableValues)
      */
-    public String generatePdfFromDocxTemplate(Path docxTemplatePath, Path pdfOutputPath, Contract contract) {
+    @Override
+    public String generateDocxFile(Contract contract) {
         try {
-            if (!Files.exists(docxTemplatePath)) {
-                throw new RuntimeException("DOCX template file not found: " + docxTemplatePath);
+            Path out = docxPathOf(contract.getId());
+            Files.createDirectories(out.getParent());
+
+            // chỉ hỗ trợ template DOCX
+            if (contract.getTemplate() == null || contract.getTemplate().getFilePath() == null) {
+                throw new RuntimeException("Template not found or filePath is null");
+            }
+            Path templatePath = Paths.get(contract.getTemplate().getFilePath());
+            String name = templatePath.getFileName().toString().toLowerCase(Locale.ROOT);
+            if (!name.endsWith(".docx")) {
+                throw new RuntimeException("Only DOCX template is supported");
+            }
+            if (!Files.exists(templatePath)) {
+                throw new RuntimeException("Template file not found: " + templatePath);
             }
 
-            // TẠO FILE DOCX TẠM THỜI VỚI BIẾN ĐÃ THAY THẾ
-            Path tempDocxPath = pdfOutputPath.getParent().resolve("temp_contract_" + System.currentTimeMillis() + ".docx");
+            Map<String, String> map = contract.getVariableValues() == null
+                    ? Collections.emptyMap()
+                    : contract.getVariableValues().stream()
+                    .collect(Collectors.toMap(
+                            ContractVariableValue::getVarName,
+                            v -> Optional.ofNullable(v.getVarValue()).orElse("")
+                    ));
 
-            // Copy template và thay thế biến trong DOCX gốc (giữ nguyên định dạng)
-            replaceVariablesInDocxFile(docxTemplatePath, tempDocxPath, contract.getVariableValues());
+            // biến -> variableReplace
+            WordprocessingMLPackage pkg = WordprocessingMLPackage.load(templatePath.toFile());
+            VariablePrepare.prepare(pkg);
+            pkg.getMainDocumentPart().variableReplace(map);
+            pkg.save(out.toFile());
 
-            // SỬ DỤNG ONLYOFFICE ĐỂ CONVERT - NHANH VÀ GIỮ NGUYÊN ĐỊNH DẠNG
-            boolean success = onlyOfficeConvertService.convertDocxToPdf(tempDocxPath, pdfOutputPath);
-
-            if (!success) {
-                log.warn("❌ OnlyOffice conversion failed, falling back to improved PDFBox");
-                // Fallback to improved PDFBox conversion
-                convertWithPdfBoxImproved(tempDocxPath, pdfOutputPath, contract);
-            } else {
-                log.info("✅ Successfully converted DOCX to PDF using OnlyOffice: {}", pdfOutputPath);
-            }
-
-            // Thêm placeholder chữ ký vào PDF đã convert
-            addSignaturePlaceholdersToExistingPdf(pdfOutputPath, contract);
-
-            // Xóa file DOCX tạm
-            Files.deleteIfExists(tempDocxPath);
-
-            return pdfOutputPath.toString();
-
+            return out.toString();
         } catch (Exception e) {
-            log.error("❌ Failed to generate PDF from DOCX template: {}", e.getMessage());
-            throw new RuntimeException("Failed to generate PDF from DOCX template: " + e.getMessage(), e);
+            throw new RuntimeException("Generate DOCX failed: " + e.getMessage(), e);
         }
     }
 
     /**
-     * Thêm placeholder chữ ký vào PDF đã được convert bằng OnlyOffice
+     * Lấy PDF; nếu chưa có thì convert từ DOCX (tự sinh DOCX nếu cần)
      */
-    private void addSignaturePlaceholdersToExistingPdf(Path pdfPath, Contract contract) {
-        if (contract.getFlow() == null || contract.getFlow().getSteps() == null) {
-            return;
-        }
-
-        try (PDDocument document = PDDocument.load(pdfPath.toFile())) {
-            PDPage lastPage = document.getPage(document.getNumberOfPages() - 1);
-            PDFont font = loadUnicodeFont(document);
-
-            // Thêm placeholder chữ ký vào cuối trang
-            try (PDPageContentStream contentStream = new PDPageContentStream(
-                    document, lastPage, PDPageContentStream.AppendMode.APPEND, true, true)) {
-
-                float pageHeight = lastPage.getMediaBox().getHeight();
-                float yPosition = 150; // Vị trí từ dưới lên
-                float margin = 50;
-
-                contentStream.setFont(font, 10);
-
-                // Thêm tiêu đề cho phần chữ ký
-                contentStream.beginText();
-                contentStream.newLineAtOffset(margin, yPosition);
-                contentStream.showText("CHỮ KÝ XÁC NHẬN:");
-                contentStream.endText();
-                yPosition -= 20;
-
-                // Thêm placeholder cho từng bước
-                for (ApprovalStep step : contract.getFlow().getSteps()) {
-                    if (step.getSignaturePlaceholder() != null && !step.getSignaturePlaceholder().isBlank()) {
-                        if (yPosition < 50) break; // Hết chỗ trên trang
-
-                        contentStream.beginText();
-                        contentStream.newLineAtOffset(margin, yPosition);
-                        contentStream.showText(step.getSignaturePlaceholder() + ": _________________________");
-                        contentStream.endText();
-
-                        yPosition -= 25;
-                    }
-                }
-            }
-
-            // Lưu PDF với placeholder đã thêm
-            Path tempPdf = pdfPath.getParent().resolve("temp_with_signatures_" + System.currentTimeMillis() + ".pdf");
-            document.save(tempPdf.toFile());
-            Files.move(tempPdf, pdfPath, StandardCopyOption.REPLACE_EXISTING);
-
-            log.info("✅ Added signature placeholders to PDF: {}", pdfPath);
-
-        } catch (Exception e) {
-            log.warn("⚠️ Could not add signature placeholders to PDF: {}", e.getMessage());
-            // Tiếp tục dù không thêm được placeholder
-        }
-    }
-
-    /**
-     * Thay thế biến trong file DOCX gốc mà vẫn giữ nguyên định dạng
-     */
-    private void replaceVariablesInDocxFile(Path sourceDocx, Path targetDocx, List<ContractVariableValue> variables) {
+    @Override
+    public File getPdfOrConvert(Long contractId) {
         try {
-            // Copy file gốc
-            Files.copy(sourceDocx, targetDocx, StandardCopyOption.REPLACE_EXISTING);
+            Path pdf = pdfPathOf(contractId);
+            if (Files.exists(pdf)) return pdf.toFile();
 
-            Map<String, String> variableMap = new HashMap<>();
-            for (ContractVariableValue var : variables) {
-                variableMap.put(var.getVarName(), var.getVarValue() != null ? var.getVarValue() : "");
+            Path docx = docxPathOf(contractId);
+            if (!Files.exists(docx)) {
+                Contract c = contractRepository.findById(contractId)
+                        .orElseThrow(() -> new RuntimeException("Contract not found"));
+                generateDocxFile(c);
+            }
+            convertToPdfUsingOnlyOffice(contractId, docx, pdf);
+
+            // cập nhật DB
+            Contract c = contractRepository.findById(contractId).orElseThrow();
+            c.setFilePath(pdf.toString());
+            c.setFileGeneratedAt(LocalDateTime.now());
+            contractRepository.save(c);
+
+            return pdf.toFile();
+        } catch (Exception e) {
+            throw new RuntimeException("Get PDF or convert failed: " + e.getMessage(), e);
+        }
+    }
+
+    // ========================================================================
+    // Helpers (DOCX, OnlyOffice, Paths, I/O)
+    // ========================================================================
+
+    /** Đảm bảo có DOCX cho hợp đồng (sinh nếu chưa) – có thể override biến bằng tham số */
+    private Path ensureDocxGenerated(Contract contract, List<ContractVariableValue> overrideVars) {
+        try {
+            Path docx = docxPathOf(contract.getId());
+            Files.createDirectories(docx.getParent());
+
+            if (Files.exists(docx) && Files.size(docx) > 0) {
+                return docx;
             }
 
-            // Sử dụng Apache POI để thay thế biến trong DOCX
-            replaceVariablesInDocxWithPoi(targetDocx, variableMap);
-
-            log.info("✅ Successfully replaced variables in DOCX: {}", targetDocx);
-
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to replace variables in DOCX: " + e.getMessage(), e);
-        }
-    }
-
-    /**
-     * Thay thế biến trong DOCX sử dụng Apache POI
-     */
-    private void replaceVariablesInDocxWithPoi(Path docxPath, Map<String, String> variableMap) {
-        try {
-            // Implementation sẽ được thêm sau nếu cần
-            // Hiện tại chỉ cần copy file, biến sẽ được xử lý ở lớp trên
-            log.info("Variables replacement in DOCX will be handled by ContractServiceImpl");
-        } catch (Exception e) {
-            log.warn("Could not replace variables in DOCX: {}", e.getMessage());
-        }
-    }
-
-    /**
-     * Fallback PDFBox conversion với layout tốt hơn
-     */
-    private void convertWithPdfBoxImproved(Path docxPath, Path pdfPath, Contract contract) {
-        try {
-            // Implementation của PDFBox fallback
-            // ... (giữ nguyên implementation cũ)
-            log.info("Using PDFBox fallback conversion for: {}", docxPath);
-        } catch (Exception e) {
-            throw new RuntimeException("PDFBox fallback conversion failed: " + e.getMessage(), e);
-        }
-    }
-
-    // ============ CÁC PHƯƠNG THỨC HIỆN CÓ GIỮ NGUYÊN ============
-
-    /**
-     * Tìm và thay thế placeholder bằng chữ ký dựa trên text trong PDF
-     */
-    private boolean findAndReplacePlaceholderByText(PDDocument document, String placeholder, PDImageXObject image) {
-        try {
-            // Tìm tất cả các trang có chứa placeholder
-            for (int pageIndex = 0; pageIndex < document.getNumberOfPages(); pageIndex++) {
-                PDPage page = document.getPage(pageIndex);
-                Map<String, TextPosition> placeholderPositions = findTextPosition(document, page, placeholder);
-
-                if (!placeholderPositions.isEmpty()) {
-                    for (Map.Entry<String, TextPosition> entry : placeholderPositions.entrySet()) {
-                        TextPosition pos = entry.getValue();
-                        float x = pos.getXDirAdj();
-                        float y = pos.getYDirAdj();
-                        float width = pos.getWidthDirAdj();
-                        float height = pos.getHeightDir();
-
-                        replaceTextWithImage(document, page, image, x, y, width, height);
-                    }
-                    return true;
-                }
+            // Chỉ hỗ trợ template DOCX
+            if (contract.getTemplate() == null || contract.getTemplate().getFilePath() == null) {
+                throw new RuntimeException("Template not found or filePath is null");
+            }
+            Path templatePath = Paths.get(contract.getTemplate().getFilePath());
+            if (!Files.exists(templatePath)) {
+                throw new RuntimeException("Template file not found: " + templatePath);
+            }
+            if (!templatePath.getFileName().toString().toLowerCase(Locale.ROOT).endsWith(".docx")) {
+                throw new RuntimeException("Only DOCX template is supported");
             }
 
-            return false;
+            // Build map biến (ưu tiên override)
+            List<ContractVariableValue> src = (overrideVars != null) ? overrideVars : contract.getVariableValues();
+            Map<String, String> map = (src == null)
+                    ? Collections.emptyMap()
+                    : src.stream().collect(Collectors.toMap(
+                    ContractVariableValue::getVarName,
+                    v -> Optional.ofNullable(v.getVarValue()).orElse("")
+            ));
 
+            WordprocessingMLPackage pkg = WordprocessingMLPackage.load(templatePath.toFile());
+            VariablePrepare.prepare(pkg);
+            pkg.getMainDocumentPart().variableReplace(map);
+            pkg.save(docx.toFile());
+
+            return docx;
         } catch (Exception e) {
-            log.error("Error finding and replacing placeholder by text: {}", e.getMessage());
-            return false;
+            throw new RuntimeException("Ensure DOCX generated failed: " + e.getMessage(), e);
         }
     }
 
-    /**
-     * Tìm vị trí của text trong trang PDF
-     */
-    private Map<String, TextPosition> findTextPosition(PDDocument document, PDPage page, String searchText) throws IOException {
-        Map<String, TextPosition> positions = new HashMap<>();
-
-        PDFTextStripper stripper = new PDFTextStripper() {
-            @Override
-            protected void writeString(String text, List<TextPosition> textPositions) throws IOException {
-                for (TextPosition position : textPositions) {
-                    String textSegment = position.getUnicode();
-                    if (textSegment != null && textSegment.contains(searchText)) {
-                        positions.put(textSegment, position);
-                    }
-                }
-                super.writeString(text, textPositions);
-            }
-        };
-
-        stripper.setStartPage(document.getPages().indexOf(page) + 1);
-        stripper.setEndPage(document.getPages().indexOf(page) + 1);
-        stripper.getText(document);
-
-        return positions;
-    }
-
-    /**
-     * Trích xuất toàn bộ text từ PDF để validate
-     */
-    private String extractAllText(PDDocument document) throws IOException {
-        PDFTextStripper stripper = new PDFTextStripper();
-        return stripper.getText(document);
-    }
-
-    /**
-     * Thay thế text bằng hình ảnh
-     */
-    private void replaceTextWithImage(PDDocument document, PDPage page, PDImageXObject image,
-                                      float x, float y, float width, float height) {
-        try (PDPageContentStream contentStream = new PDPageContentStream(
-                document, page, PDPageContentStream.AppendMode.APPEND, true, true)) {
-
-            // Tính toán vị trí Y (PDFBox coordinates are from bottom left)
-            float pageHeight = page.getMediaBox().getHeight();
-            float actualY = pageHeight - y - height;
-
-            // Vẽ hình chữ nhật trắng để che text cũ
-            contentStream.setNonStrokingColor(255, 255, 255);
-            contentStream.addRect(x, actualY, width + 10, height + 5);
-            contentStream.fill();
-
-            // Vẽ chữ ký với kích thước phù hợp
-            float imageWidth = Math.max(width * 2, 120); // Rộng gấp 2 lần text, tối thiểu 120
-            float imageHeight = Math.max(height * 3, 60); // Cao gấp 3 lần text, tối thiểu 60
-
-            contentStream.drawImage(image, x, actualY - 5, imageWidth, imageHeight);
-
-        } catch (IOException e) {
-            log.error("Error replacing text with image: {}", e.getMessage());
-        }
-    }
-
-    /**
-     * Load font Unicode
-     */
-    private PDFont loadUnicodeFont(PDDocument document) {
+    /** Convert DOCX → PDF bằng OnlyOffice ConvertService */
+    private void convertToPdfUsingOnlyOffice(Long contractId, Path inputDocx, Path outputPdf) {
         try {
-            ClassPathResource resource = new ClassPathResource("fonts/arial.ttf");
-            if (resource.exists()) {
-                try (InputStream fontStream = resource.getInputStream()) {
-                    return PDType0Font.load(document, fontStream);
-                }
-            }
-        } catch (Exception e) {
-            log.debug("Không tìm thấy font trong classpath: {}", e.getMessage());
-        }
+            Files.createDirectories(outputPdf.getParent());
 
-        String[] fontPaths = {
-                "C:/Windows/Fonts/arial.ttf",
-                "/usr/share/fonts/truetype/freefont/FreeSans.ttf",
-                "/Library/Fonts/Arial.ttf"
-        };
+            // OnlyOffice cần URL public để fetch DOCX từ BE
+            // Bạn cần một controller nội bộ như:
+            // GET /internal/files/{contractId}/contract.docx -> trả FileSystemResource(docxPath)
+            final String sourceUrl = hostBaseUrl.replaceAll("/+$", "")
+                    + "/internal/files/" + contractId + "/" + DOCX_NAME;
 
-        for (String fontPath : fontPaths) {
-            File fontFile = new File(fontPath);
-            if (fontFile.exists()) {
+            Map<String, Object> payload = new HashMap<>();
+            payload.put("async", false);
+            payload.put("filetype", "docx");
+            payload.put("outputtype", "pdf");
+            payload.put("key", contractId + "-" + System.currentTimeMillis());
+            payload.put("title", DOCX_NAME);
+            payload.put("url", sourceUrl);
+
+            String json = om.writeValueAsString(payload);
+
+            HttpHeaders headers = new HttpHeaders();
+            headers.setContentType(MediaType.APPLICATION_JSON);
+            headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+
+            String base = docServer.replaceAll("/+$", "");
+            String[] endpoints = { base + "/ConvertService.ashx", base + "/ConvertService" };
+
+            ResponseEntity<String> resp = null;
+            Exception lastEx = null;
+            for (String ep : endpoints) {
                 try {
-                    return PDType0Font.load(document, fontFile);
-                } catch (IOException ex) {
-                    log.warn("Cannot load font from {}", fontPath);
+                    resp = rest.postForEntity(ep, new HttpEntity<>(json, headers), String.class);
+                    if (resp.getStatusCode().is2xxSuccessful()) break;
+                } catch (Exception e) {
+                    lastEx = e;
+                }
+            }
+            if (resp == null) {
+                throw new RuntimeException("ConvertService request failed (no response)", lastEx);
+            }
+            if (!resp.getStatusCode().is2xxSuccessful() || resp.getBody() == null) {
+                throw new RuntimeException("ConvertService HTTP error: " + resp.getStatusCode()
+                        + " body=" + (resp.getBody() == null ? "<null>" : resp.getBody()));
+            }
+
+            MediaType ct = resp.getHeaders().getContentType();
+            if (ct == null || !ct.toString().toLowerCase(Locale.ROOT).contains("application/json")) {
+                throw new RuntimeException("ConvertService response is not JSON. contentType=" + ct
+                        + ", body=" + resp.getBody());
+            }
+
+            JsonNode root = om.readTree(resp.getBody());
+            int attempts = 0;
+            while (!root.path("endConvert").asBoolean(false) && attempts < 20) {
+                Thread.sleep(500);
+                resp = rest.postForEntity(endpoints[0], new HttpEntity<>(json, headers), String.class);
+                if (!resp.getStatusCode().is2xxSuccessful() || resp.getBody() == null) {
+                    throw new RuntimeException("ConvertService polling failed: " + resp.getStatusCode());
+                }
+                root = om.readTree(resp.getBody());
+                attempts++;
+            }
+
+            if (!root.path("endConvert").asBoolean(false)) {
+                int percent = root.path("percent").asInt(-1);
+                throw new RuntimeException("ConvertService not finished. percent=" + percent);
+            }
+
+            String fileUrl = root.path("fileUrl").asText(null);
+            if (fileUrl == null || fileUrl.isBlank()) {
+                throw new RuntimeException("ConvertService returned no fileUrl");
+            }
+
+            byte[] pdfBytes = rest.getForObject(fileUrl, byte[].class);
+            if (pdfBytes == null || pdfBytes.length == 0) {
+                throw new RuntimeException("Downloaded PDF is empty from: " + fileUrl);
+            }
+
+            Files.write(outputPdf, pdfBytes, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+        } catch (Exception e) {
+            throw new RuntimeException("Convert via ONLYOFFICE failed: " + e.getMessage(), e);
+        }
+    }
+
+    // ========================================================================
+    // DOCX helpers (placeholder, image/text insert, read text)
+    // ========================================================================
+
+    private boolean replacePlaceholderWithImage(WordprocessingMLPackage pkg,
+                                                String placeholder,
+                                                byte[] imageBytes,
+                                                Float widthPx, Float heightPx) throws Exception {
+        long cx = pxToEmu(widthPx != null ? widthPx : DEFAULT_SIG_W);
+        long cy = pxToEmu(heightPx != null ? heightPx : DEFAULT_SIG_H);
+
+        var mdp = pkg.getMainDocumentPart();
+        List<Object> content = mdp.getContent();
+
+        BinaryPartAbstractImage imagePart = BinaryPartAbstractImage.createImagePart(pkg, imageBytes);
+        var inline = imagePart.createImageInline("signature", "signature", 0, 1, cx, cy, false);
+
+        for (int pi = 0; pi < content.size(); pi++) {
+            Object pObj = unwrap(content.get(pi));
+            if (pObj instanceof P p) {
+                List<Object> runs = p.getContent();
+                for (int ri = 0; ri < runs.size(); ri++) {
+                    Object rObj = unwrap(runs.get(ri));
+                    if (rObj instanceof R r) {
+                        for (int ti = 0; ti < r.getContent().size(); ti++) {
+                            Object tObj = unwrap(r.getContent().get(ti));
+                            if (tObj instanceof Text t) {
+                                String val = t.getValue();
+                                if (val != null && val.contains(placeholder)) {
+                                    int idx = val.indexOf(placeholder);
+                                    String before = val.substring(0, idx);
+                                    String after  = val.substring(idx + placeholder.length());
+
+                                    t.setValue(before);
+
+                                    Drawing drawing = WML.createDrawing();
+                                    drawing.getAnchorOrInline().add(inline);
+                                    R imgRun = WML.createR();
+                                    imgRun.getContent().add(drawing);
+                                    runs.add(ri + 1, imgRun);
+
+                                    if (!after.isEmpty()) {
+                                        R afterRun = WML.createR();
+                                        Text afterText = WML.createText();
+                                        afterText.setValue(after);
+                                        afterRun.getContent().add(afterText);
+                                        runs.add(ri + 2, afterRun);
+                                    }
+                                    return true;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
-
-        log.warn("Không tìm thấy font Unicode, sử dụng Helvetica");
-        return PDType1Font.HELVETICA;
+        return false;
     }
 
-    private byte[] loadImageBytes(String imageUrl) {
+    private void addParagraphWithText(WordprocessingMLPackage pkg, String text, int fontSizePt, boolean bold) {
+        P p = WML.createP();
+        R r = WML.createR();
+        Text t = WML.createText();
+        t.setValue(text);
+
+        RPr rPr = WML.createRPr();
+        if (bold) {
+            BooleanDefaultTrue b = new BooleanDefaultTrue();
+            b.setVal(true);
+            rPr.setB(b);
+        }
+        HpsMeasure size = new HpsMeasure();
+        size.setVal(BigInteger.valueOf(Math.max(2, fontSizePt) * 2L)); // half-points
+        rPr.setSz(size);
+        rPr.setSzCs(size);
+
+        r.setRPr(rPr);
+        r.getContent().add(t);
+
+        p.getContent().add(r);
+        pkg.getMainDocumentPart().addObject(p);
+    }
+
+    private String readAllTextFromDocx(Path docx) {
         try {
-            if (imageUrl == null || imageUrl.isBlank()) {
-                log.warn("Signature image URL is null or blank");
+            WordprocessingMLPackage pkg = WordprocessingMLPackage.load(docx.toFile());
+            StringBuilder sb = new StringBuilder();
+            collectText(pkg.getMainDocumentPart().getContent(), sb);
+            return sb.toString();
+        } catch (Exception e) {
+            log.warn("readAllTextFromDocx error: {}", e.getMessage());
+            return "";
+        }
+    }
+
+    private void collectText(List<Object> content, StringBuilder sb) {
+        for (Object o : content) {
+            Object u = unwrap(o);
+            if (u instanceof P p) {
+                for (Object rObj : p.getContent()) {
+                    Object ur = unwrap(rObj);
+                    if (ur instanceof R r) {
+                        for (Object tObj : r.getContent()) {
+                            Object ut = unwrap(tObj);
+                            if (ut instanceof Text t) {
+                                sb.append(t.getValue());
+                            }
+                        }
+                    }
+                }
+                sb.append('\n');
+            }
+        }
+    }
+
+    private String normalizePlaceholder(String raw) {
+        String s = raw.trim();
+        // Cho phép user truyền "KEY" hoặc "{{SIGN:KEY}}" hoặc "{{KEY}}"
+        if (s.startsWith("{{") && s.endsWith("}}")) return s;
+        if (s.startsWith("SIGN:") || s.startsWith("sign:")) return "{{" + s + "}}";
+        return "{{SIGN:" + s + "}}";
+    }
+
+    private long pxToEmu(float px) { return Math.round(px * 9525f); }
+
+    private Object unwrap(Object o) { return (o instanceof JAXBElement<?> je) ? je.getValue() : o; }
+
+    // ========================================================================
+    // I/O helpers
+    // ========================================================================
+
+    /** Hỗ trợ data: URL, http(s), file path (tuyệt đối/ tương đối), và đường dẫn trong signatureStorageDir */
+    private byte[] loadImageBytes(String imageUrlOrPath) {
+        if (imageUrlOrPath == null || imageUrlOrPath.isBlank()) return null;
+        try {
+            // data:image/png;base64,...
+            if (imageUrlOrPath.startsWith("data:")) {
+                int comma = imageUrlOrPath.indexOf(',');
+                if (comma > 0) {
+                    String b64 = imageUrlOrPath.substring(comma + 1);
+                    return Base64.getDecoder().decode(b64);
+                }
                 return null;
             }
 
-            log.info("Loading signature image: {}", imageUrl);
-
-            // XỬ LÝ BASE64 STRING (nếu có)
-            if (imageUrl.startsWith("data:image/")) {
-                String base64Data = imageUrl.substring(imageUrl.indexOf(",") + 1);
-                return Base64.getDecoder().decode(base64Data);
-            } else if (isBase64(imageUrl)) {
-                return Base64.getDecoder().decode(imageUrl);
-            }
-
-            // XỬ LÝ ĐƯỜNG DẪN FILE - QUAN TRỌNG: ĐÂY LÀ TRƯỜNG HỢP CHÍNH
-            Path imagePath;
-
-            // THỬ CÁC ĐƯỜNG DẪN CÓ THỂ
-            String[] possiblePaths = {
-                    imageUrl, // Đường dẫn gốc từ database
-                    "uploads/" + imageUrl, // Thêm uploads/ phía trước
-                    "static/" + imageUrl,  // Thử trong static
-                    "src/main/resources/static/" + imageUrl, // Trong resources
-                    System.getProperty("user.dir") + "/uploads/" + imageUrl, // Đường dẫn tuyệt đối
-                    System.getProperty("user.dir") + "/" + imageUrl
-            };
-
-            for (String path : possiblePaths) {
-                imagePath = Paths.get(path);
-                log.info("Trying signature path: {} - exists: {}", path, Files.exists(imagePath));
-
-                if (Files.exists(imagePath)) {
-                    byte[] imageBytes = Files.readAllBytes(imagePath);
-                    log.info("Successfully loaded signature from: {}, size: {} bytes", path, imageBytes.length);
-                    return imageBytes;
+            // http(s)
+            if (imageUrlOrPath.startsWith("http://") || imageUrlOrPath.startsWith("https://")) {
+                try (InputStream in = new java.net.URL(imageUrlOrPath).openStream();
+                     ByteArrayOutputStream bos = new ByteArrayOutputStream()) {
+                    in.transferTo(bos);
+                    return bos.toByteArray();
                 }
             }
 
-            // LOG TẤT CẢ CÁC ĐƯỜNG DẪN ĐÃ THỬ ĐỂ DEBUG
-            log.error("Cannot find signature image file. Tried paths:");
-            for (String path : possiblePaths) {
-                log.error("  - {} (exists: {})", path, Files.exists(Paths.get(path)));
-            }
+            // File system (absolute/relative)
+            Path p = Paths.get(imageUrlOrPath);
+            if (Files.exists(p)) return Files.readAllBytes(p);
 
+            // Thử relative với signatureStorageDir
+            Path rel = Paths.get(signatureStorageDir, imageUrlOrPath).normalize();
+            if (Files.exists(rel)) return Files.readAllBytes(rel);
+
+            log.error("Signature image not found at: {} or {}", p, rel);
             return null;
-
         } catch (Exception e) {
-            log.error("Failed to load signature image '{}': {}", imageUrl, e.getMessage());
+            log.error("loadImageBytes fail: {}", e.getMessage(), e);
             return null;
         }
     }
 
-    private boolean isBase64(String str) {
-        if (str == null || str.length() % 4 != 0) {
-            return false;
+    private Long extractContractIdFromPath(Path anyPathUnderContractFolder) {
+        // Expect: uploads/contracts/{id}/...
+        Path parent = anyPathUnderContractFolder.getParent();
+        while (parent != null && !parent.getFileName().toString().equals("contracts")) {
+            try {
+                long id = Long.parseLong(parent.getFileName().toString());
+                return id;
+            } catch (NumberFormatException ignore) {
+            }
+            parent = parent.getParent();
         }
-        try {
-            Base64.getDecoder().decode(str);
-            return true;
-        } catch (IllegalArgumentException e) {
-            return false;
-        }
+        throw new IllegalArgumentException("Cannot extract contractId from path: " + anyPathUnderContractFolder);
     }
 
-    private void addTextToPage(PDDocument document, PDPage page, PDFont font,
-                               String text, float x, float y) {
-        try (PDPageContentStream contentStream = new PDPageContentStream(
-                document, page, PDPageContentStream.AppendMode.APPEND, true, true)) {
-            contentStream.beginText();
-            contentStream.setFont(font, 8);
-            contentStream.newLineAtOffset(x, y);
-            contentStream.showText(text);
-            contentStream.endText();
-        } catch (IOException e) {
-            log.error("Error adding text to page: {}", e.getMessage());
-        }
+    private Path contractDirOf(Long id) {
+        return Paths.get(System.getProperty("user.dir"), UPLOAD_ROOT, String.valueOf(id)).normalize();
+    }
+
+    private Path docxPathOf(Long id) {
+        return contractDirOf(id).resolve(DOCX_NAME);
+    }
+
+    private Path pdfPathOf(Long id) {
+        return contractDirOf(id).resolve(PDF_NAME);
     }
 }
